[jc] update form with onblur event

--- a/src/fancy_form/style.css
+++ b/src/fancy_form/style.css
@@ -65,3 +65,11 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.empty-space {
+  padding-top: 10px;
+}
+
+.validation-msg {
+  visibility: hidden;
+}
